testcases/pos/labeled/call_return_annotations_raise_blocking.bard
let fun f(): Int = 42 raisedTo {secret}
in
    f()
end
