testcases/neg/eval_type/return_can_fail_does_fail.bard
let fun f(b: Bool): Int = (if b then 2 else "hello") raisedTo {secret}
	val x = f(false)
in
	send 42
end
